# rust-indexed

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  rustindexed.service
app/: index.html
examples/: indexer.rs  search.rs
mdbooks/lurk-effective-rust/: beyond-std.html  bindgen.html  borrows.html  builders.html  casts.html  ci.html  clippy.html  concepts.html  cover.html  deadlock.html  default-impl.html  dep-graph.html  deps.html  documentation.html  errors.html  features.html  ffi.html  generics.html  indexing.html  intro.html  iterators.html  lifetimes.html  macros.html  newtype.html  no-std.html  optimize.html  panic.html  print.html  raii.html  re-export.html  references.html  reflection.html  semver.html  std-traits.html  testing.html  tooling.html  transform.html  types.html  unsafe.html  use-tools.html  (+4 more)
src/: index.rs  indexers.rs  lib.rs  main.rs  parsers.rs  ranking.rs
