[package]
name = "rust-indexed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
bitflags = "2.4.2"
serde = "1.0.193"
tantivy = "0.21.1"
tokio = { version = "1.0", features = ["full"] }
toml = "0.8.8"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs"] }
