[package]
name = "rust-indexed"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "*"
bitflags = "*"
html-escape = "*"
lazy_static = "*"
regex = "*"
serde = "*"
tantivy = "*"
tokio = { version = "*", features = ["full"] }
toml = "*"
tower = { version = "*", features = ["util"] }
tower-http = { version = "*", features = ["fs"] }
